<resources>
    <string name="app_name">taskmaster</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks">Total tasks: 0</string>
    <string name="do_something">Do Something</string>
    <string name="my_task">My Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task_button">ADD TASK</string>
    <string name="all_tasks_button">ALL TASKS</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="username">Username</string>
    <string name="save_me">Save me</string>
    <string name="title">Title</string>
    <string name="state">State</string>
    <string name="body">Body</string>
    <string name="channel_name">TASKKKKKMASSSTEERRR</string>
    <string name="channel_description">Notifications for TASKKKKKMASSSTEERRR</string>
    <string name="name">Name</string>
    <string name="setting">Setting</string>
    <string name="sign_in">Sign In</string>
    <string name="join_us">Join Us</string>
    <string name="upload_files">Upload Files</string>
    <string name="task_image">task_image</string>
    <string name="download_the_linked_file">download_the_linked_file</string>
    <string name="save_your_location">Save Your Location</string>
    <string name="getlocation">GetLocation</string>
    <string name="view_location">View Location</string>
</resources>