...
        android:layout_width="357dp"
        android:layout_height="337dp"
        app:layout_constraintBottom_toTopOf="@+id/Setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/user"
        android:layout_width="321dp"
        android:layout_height="49dp"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/buttonMain_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:background="#90caf9"
        android:text="@string/add_task_button"
        app:layout_constraintBottom_toBottomOf="parent"
...
